# caramel-client-rs

./: .dockerignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile.dev  LICENSE-MIT  Makefile  Makefile.build  README.md  TESTcommands.sh  build.mk
.gitlab/issue_templates/: release.md
certs/: ca.modio.se.cacert
examples/: more-advanced.rs  private-pki.rs  simplest.rs  using_callbacks_interface.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: create_csr.rs  create_csr_2.rs  network_post_reply.rs  verify_cacert.rs  verify_cert.rs  verify_cert_2.rs  verify_private_key.rs
src/: caramel-client.rs  certs.rs  file_access_modes.rs  lib.rs  network.rs
src/certs/: blobs.rs
src/network/: hexsum.rs
