# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright 2020 Modio AB

[package]
name = "caramel-client"
version = "0.1.0"
authors = ["robert.svensk <robert.svensk@hiq.se>", "D.S. Ljungmark <ljungmark@modio.se>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/ModioAB/caramel-client-rs"
keywords = ["csr", "certificate", "caramel", "tls", "openssl"]
categories = ["command-line-utilities", "cryptography", "authentication"]
description = "A rust client to generate keys, requests and fetch updated certificates from a caramel server"

readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = {version = "0.4"}
log = "0.4"
openssl = {version = "0.10", features = ["vendored"]}
sha2 = "0.9.1"
simple_logger = "1.6"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.7"
test-env-log = "0.2"
tracing-subscriber = {version = "0.2", features = ["chrono", "env-filter", "fmt"]}

[[bin]]
name = "caramel-client-rs"
path = "src/caramel-client.rs"
