# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright 2020 Modio AB

[package]
name = "caramel-client"
version = "1.1.0"
authors = ["D.S. Ljungmark <ljungmark@modio.se>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/ModioAB/caramel-client-rs"
homepage = "https://modioab.gitlab.io/caramel-client-rs/"
keywords = ["caramel", "csr", "certificate", "tls", "openssl"]
categories = ["command-line-utilities", "cryptography", "authentication"]
description = "A caramel client, to generate keys, requests and fetch updated certificates from a caramel server"
readme = "README.md"

exclude = [
# Containers need not be part of package release
   "build.mk",
   "Makefile*",
   "Dockerfile*",
   ".dockerignore",
   ".cargo-cross-config",
# Shell script to check log output should not be part of release
   "TESTcommands.sh",
# gitlab data needs not be part of release
   ".gitlab*",
# Git data need not be part of release
   ".gitignore",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
curl = {version = "^0.4.41", features = ["static-ssl", "static-curl"]}
log = "0.4"
openssl = {version = "0.10", features = ["vendored"]}
rand = "0.8"
sha2 = "0.9"
simple_logger = "1.9"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.7"
test-log = "0.2"
tracing-subscriber = {version = "0.2", features = ["chrono", "env-filter", "fmt"]}

[[bin]]
name = "caramel-client-rs"
path = "src/caramel-client.rs"
